<resources>
    <string name="app_name">NUMAD21Su-AlannaPasco</string>
    <string name="hello_world_string">Hello World!</string>
    <string name="about_button_string">about</string>
    <string name="about_text_string">Alanna Pasco | pasco.a@northeastern.edu </string>
    <string name="no_value_string" translatable="false"> </string>
    <string name="clicky_button_string">Clicky</string>
    <string name="A_string">A</string>
    <string name="B_string">B</string>
    <string name="C_string">C</string>
    <string name="D_string">D</string>
    <string name="E_string">E</string>
    <string name="F_string">F</string>
    <string name="pressed_string">Pressed: </string>
    <string name="link_collector_button_string">Link Collector </string>
    <string name="link_name_hint">Link Name</string>
    <string name="link_url_hint">Link URL</string>
    <string name="long_label">Longitude:</string>
    <string name="lat_label">Latitude:</string>
    <string name="locator_header">Where in the world am I?</string>
    <string name="locator_button_string">Locator</string>
    <string name="ays_button_string">at your service…</string>
    <string name="ays_header_string">Flying on a budget? Allow us to help…</string>
    <string name="queryAPI_button_string">Let\'s Go!</string>
    <string name="from_hint">From (required)</string>
    <string name="to_hint">To (required)</string>
    <string name="depart_date_hint">Leave MM-DD-YYYY (required)</string>
    <string name="return_date_hint">Return MM-DD-YYYY (required)</string>
    <string name="ays_hint_string">Choose specific travel dates, or click \"flexible dates\" to view the cheapest upcoming options!</string>
    <string name="from_result_label">From: </string>
    <string name="to_result_label">To: </string>
    <string name="ays_results_error_string">Oops! There are no flights for those dates. Sorry!</string>
    <string name="flexible_checkbox_string">flexible dates</string>
    <string name="oneway_checkbox_string">one way</string>
    <string name="filter_label_string">filter results:</string>
    <string name="outbound_string">outbound</string>
    <string name="inbound_string">inbound</string>


</resources>