<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_theme_background"
    tools:context=".ClickyActivity">


    <TextView
        android:id="@+id/cur_pressed_msg_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressed_string"
        android:textColor="#AD0B0A0A"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705" />

    <Button
        android:id="@+id/button_a_id"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_theme_button"
        android:text="@string/A_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_b_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.278" />

    <Button
        android:id="@+id/button_b_id"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_theme_button"
        android:text="@string/B_string"
        app:layout_constraintStart_toEndOf="@+id/button_a_id"
        app:layout_constraintEnd_toStartOf="@+id/button_c_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.278" />

    <Button
        android:id="@+id/button_c_id"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_theme_button"
        android:text="@string/C_string"
        app:layout_constraintStart_toEndOf="@+id/button_b_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.278" />

    <Button
        android:id="@+id/button_d_id"
        android:layout_width="70dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/green_theme_button"
        android:text="@string/D_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_e_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.455" />

    <Button
        android:id="@+id/button_e_id"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_theme_button"
        android:text="@string/E_string"
        app:layout_constraintStart_toEndOf="@+id/button_d_id"
        app:layout_constraintEnd_toStartOf="@+id/button_f_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.455" />

    <Button
        android:id="@+id/button_f_id"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_theme_button"
        android:text="@string/F_string"
        app:layout_constraintStart_toEndOf="@+id/button_e_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.455" />

</androidx.constraintlayout.widget.ConstraintLayout>