<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtYourService.AtYourService">

    <TextView
    android:id="@+id/ays_header_id"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/ays_header_string"
    android:textColor="#AD0B0A0A"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.496"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.028" />


    <TextView
        android:id="@+id/ays_hint_id"
        android:layout_width="346dp"
        android:layout_height="90dp"
        android:text="@string/ays_hint_string"
        android:textAlignment="center"
        android:textColor="#AD0B0A0A"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113" />

    <Button
        android:id="@+id/queryAPI_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/queryAPI_button_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.762" />

    <EditText
        android:id="@+id/depart_input_id"
        android:layout_width="349dp"
        android:layout_height="47dp"
        android:hint="@string/from_hint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.329" />

    <EditText
        android:id="@+id/destin_input_id"
        android:layout_width="349dp"
        android:layout_height="47dp"
        android:hint="@string/to_hint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.411" />

    <EditText
        android:id="@+id/depart_date_input_id"
        android:layout_width="349dp"
        android:layout_height="41dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/depart_date_hint"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destin_input_id" />

    <EditText
        android:id="@+id/return_date_input_id"
        android:layout_width="349dp"
        android:layout_height="41dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/return_date_hint"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/depart_date_input_id"
        app:layout_constraintVertical_bias="0.013" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/loading_animation_id"
        android:layout_width="match_parent"
        android:layout_height="251dp"
        android:src="@drawable/planeloading"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42" />

    <CheckBox
        android:id="@+id/oneway_checkbox_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oneway_checkbox_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destin_input_id" />

    <CheckBox
        android:id="@+id/anytime_checkbox_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anytime_checkbox_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/oneway_checkbox_id"
        app:layout_constraintTop_toBottomOf="@+id/destin_input_id" />


</androidx.constraintlayout.widget.ConstraintLayout>