<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Locator">

    <TextView
        android:id="@+id/locator_header_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locator_header"
        android:textColor="#AD0B0A0A"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/long_label_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/long_label_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/long_label"
        android:textColor="#AD0B0A0A"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241" />

    <TextView
        android:id="@+id/lat_label_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lat_label"
        android:textColor="#AD0B0A0A"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.637" />

    <TextView
        android:id="@+id/long_value_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_value_string"
        android:textColor="#AD0B0A0A"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/long_label_id"
        app:layout_constraintVertical_bias="0.097" />

    <TextView
        android:id="@+id/cur_pressed_msg_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_value_string"
        android:textColor="#AD0B0A0A"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lat_label_id"
        app:layout_constraintVertical_bias="0.278" />


</androidx.constraintlayout.widget.ConstraintLayout>